Tests/Negative/DelNonPointer.mr
fun main(): i32 {
    var x: i32 = 10;
    del x; // Error: 'del' expects a pointer type
    return 0;
}
